Tested all fnc and added print statements.

--- a/cred.yml
+++ b/cred.yml
@@ -1,6 +1,6 @@
-user    : 'USERID'
-pwd     : 'Password@123'
-factor2 : '01-01-1970'
-vc      : 'Vendor_Code'
-apikey  : '12be8cef3b1755'
-imei    : 'xyz12345'
+user    : 'FA25852'
+pwd     : 'Deep@k1998'
+factor2 : 'APPPY2976K'
+vc      : 'FA25852_U'
+apikey  : 'APILi11012022SALKIM123AMKKLMA'
+imei    : 'abc1234'
