--- a/cred.yml
+++ b/cred.yml
@@ -1,6 +1,6 @@
-user    : 'FA25852'
-pwd     : 'Deep@k1998'
-factor2 : 'APPPY2976K'
-vc      : 'FA25852_U'
-apikey  : 'APILi11012022SALKIM123AMKKLMA'
-imei    : 'abc1234'
+user    : 
+pwd     :
+factor2 : 
+vc      : 
+apikey  : 
+imei    : 
